--- a/gb/13/12/16/n4035342.md
+++ b/gb/13/12/16/n4035342.md
@@ -1,61 +1,55 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zfyjih353/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zfyjih353/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/zfyjih353/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zfyjih353/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/zfyjih353/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zfyjih353/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/zfyjih353/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zfyjih353/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/zfyjih353/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zfyjih353/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/zfyjih353/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zfyjih353/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/zfyjih353/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zfyjih353/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/zfyjih353/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zfyjih353/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/zfyjih353/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/zfyjih353/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/zfyjih353/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/zfyjih353/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/zfyjih353/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/zfyjih353/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/zfyjih353/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/zfyjih353/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/zfyjih353/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/zfyjih353/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/zfyjih353/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/zfyjih353/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/zfyjih353/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/zfyjih353/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/zfyjih353/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/zfyjih353/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/zfyjih353/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/zfyjih353/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/zfyjih353/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/zfyjih353/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/zfyjih353/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/zfyjih353/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/zfyjih353/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/zfyjih353/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/zfyjih353/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/zfyjih353/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/zfyjih353/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/zfyjih353/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/zfyjih353/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/zfyjih353/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/zfyjih353/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>跨年垃圾减量 推环保杯换热饮</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元12月16日报导】（中央社记者许秩维台北16日电）<ahref="https://github.com/zfyjih353/djy/blob/master/gb/tag/%E8%B7%A8%E5%B9%B4.md#1">跨年</a>夜过后，常见满地<ahref="https://github.com/zfyjih353/djy/blob/master/gb/tag/%E5%9E%83%E5%9C%BE.md#1">垃圾</a>。笑盟今天表示，今年除了号召千名青年收集垃圾，推出自备<ahref="https://github.com/zfyjih353/djy/blob/master/gb/tag/%E7%8E%AF%E4%BF%9D%E6%9D%AF.md#1">环保杯</a>换热饮的活动，让<ahref="https://github.com/zfyjih353/djy/blob/master/gb/tag/%E8%B7%A8%E5%B9%B4.md#1">跨年</a>垃圾减量。</p>
-<p>由一群大学师生组成的笑拥地球青年联盟今天举行“台湾首创地球夜向世界发声”研讨会，并以中英文宣达“台湾首创地球夜”宣言，希望跨年零<ahref="https://github.com/zfyjih353/djy/blob/master/gb/tag/%E5%9E%83%E5%9C%BE.md#1">垃圾</a>活动推展成世界性环保运动，同时希望民众在跨年同时，也整理居家环境、生活和心灵，干干净净地迈向新纪元。</p>
+<p>【大纪元12月16日报导】（中央社记者许秩维台北16日电）<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%B7%A8%E5%B9%B4.md#1">跨年</a>夜过后，常见满地<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%9E%83%E5%9C%BE.md#1">垃圾</a>。笑盟今天表示，今年除了号召千名青年收集垃圾，推出自备<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%8E%AF%E4%BF%9D%E6%9D%AF.md#1">环保杯</a>换热饮的活动，让<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%B7%A8%E5%B9%B4.md#1">跨年</a>垃圾减量。</p>
+<p>由一群大学师生组成的笑拥地球青年联盟今天举行“台湾首创地球夜向世界发声”研讨会，并以中英文宣达“台湾首创地球夜”宣言，希望跨年零<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%9E%83%E5%9C%BE.md#1">垃圾</a>活动推展成世界性环保运动，同时希望民众在跨年同时，也整理居家环境、生活和心灵，干干净净地迈向新纪元。</p>
 <p>笑拥地球青年联盟执行长陈政韦表示，今年将继续执行收集垃圾的活动，预计号召千名青年在台北跨年活动现场收集垃圾，同时也将在国父纪念馆外推动“Drink Green”活动。</p>
-<p>活动发起人、政治大学学生郑洵表示，去年捡垃圾时，发现纸杯、塑胶杯、宝特瓶占跨年垃圾一半以上，因此发起Drink Green活动，用“你带<ahref="https://github.com/zfyjih353/djy/blob/master/gb/tag/%E7%8E%AF%E4%BF%9D%E6%9D%AF.md#1">环保杯</a>，我请喝热饮”的诱因，鼓励民众自备环保杯，让跨年垃圾减量。</p>
+<p>活动发起人、政治大学学生郑洵表示，去年捡垃圾时，发现纸杯、塑胶杯、宝特瓶占跨年垃圾一半以上，因此发起Drink Green活动，用“你带<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%8E%AF%E4%BF%9D%E6%9D%AF.md#1">环保杯</a>，我请喝热饮”的诱因，鼓励民众自备环保杯，让跨年垃圾减量。</p>
 <p>郑洵说，跨年当天在国父纪念馆广场将免费提供千杯咖啡、可可、姜茶等热饮，提供自备环保杯参加跨年的民众免费喝，同时也派志工到各大超商或饮料店附近，发放糖果等小礼物给自备环保杯购物的民众。</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/zfyjih353/djy/blob/master/gb/11/5/2/n3244614.md#1">自备环保杯享优惠 16,000家门市店响应</a></li>
-<li><a href="https://github.com/zfyjih353/djy/blob/master/gb/11/6/15/n3287103.md#1">台防塑毒　环保杯标章将上路</a></li>
-<li><a href="https://github.com/zfyjih353/djy/blob/master/gb/11/8/31/n3359666.md#1">连锁早餐店 自备饮料杯省1元</a></li>
-<li><a href="https://github.com/zfyjih353/djy/blob/master/gb/11/9/6/n3364976.md#1">未给足环保杯优惠  环署将开罚</a></li>
-<li><a href="https://github.com/zfyjih353/djy/blob/master/gb/12/7/18/n3637629.md#1">“杯王”潘庆瑞 研发玉米环保杯</a></li>
-<li><a href="https://github.com/zfyjih353/djy/blob/master/gb/13/1/1/n3765861.md#1">台北跨年晚会  垃圾减量见效</a></li>
-<li><a href="https://github.com/zfyjih353/djy/blob/master/gb/13/1/1/n3766307.md#1">高雄跨年3,000多环保尖兵无休</a></li>
-<li><a href="https://github.com/zfyjih353/djy/blob/master/gb/13/1/1/n3766385.md#1">宣导有效 台跨年垃圾量减3吨</a></li>
-<li><a href="https://github.com/zfyjih353/djy/blob/master/gb/13/1/2/n3766925.md#1">青年志工捡垃圾  郝龙斌感谢</a></li>
-<li><a href="https://github.com/zfyjih353/djy/blob/master/gb/13/1/3/n3767472.md#1">星巴克推出1美元环保杯</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/5/2/n3244614.md#1">自备环保杯享优惠 16,000家门市店响应</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/15/n3287103.md#1">台防塑毒　环保杯标章将上路</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/8/31/n3359666.md#1">连锁早餐店 自备饮料杯省1元</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/9/6/n3364976.md#1">未给足环保杯优惠  环署将开罚</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/12/7/18/n3637629.md#1">“杯王”潘庆瑞 研发玉米环保杯</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/1/1/n3765861.md#1">台北跨年晚会  垃圾减量见效</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/1/1/n3766307.md#1">高雄跨年3,000多环保尖兵无休</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/1/1/n3766385.md#1">宣导有效 台跨年垃圾量减3吨</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/1/2/n3766925.md#1">青年志工捡垃圾  郝龙斌感谢</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/1/3/n3767472.md#1">星巴克推出1美元环保杯</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/18/n10648920.md#1" target="_blank">俞心诚：凯撒之死</a></li><li><a href="https://github.com/zfyjih353/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/12/n10846893.md#1" target="_blank">律师依法为法轮功做无罪辩护 遭中共打压</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/3/n11630909.md#1" target="_blank">林辉：中共对万里长城的破坏与利用</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/15/n10487846.md#1" target="_blank">功夫·寻道——武术大师李有甫的故事</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/zfyjih353/djy/blob/master/gb/20/12/23/n12639978.md#1">放眼2021年 英预言家谈川普与世界大事</a></li>
-<li><a href="https://github.com/zfyjih353/djy/blob/master/gb/20/12/22/n12638393.md#1">不丹王太后梦前世 故地重游感轮回</a></li>
-<li><a href="https://github.com/zfyjih353/djy/blob/master/gb/20/12/23/n12639398.md#1">4岁女童讲述前世记忆 吓坏妈妈</a></li>
-<li><a href="https://github.com/zfyjih353/djy/blob/master/gb/20/12/27/n12647393.md#1">中共培育基因改造士兵 或引圣经中末世战争</a></li>
-<li><a href="https://github.com/zfyjih353/djy/blob/master/gb/20/12/22/n12637662.md#1">濒死男子到另一个世界 获知生命的意义</a></li>
-<li><a href="https://github.com/zfyjih353/djy/blob/master/gb/20/12/26/n12646853.md#1">【新闻看点】北京顺义进战时状态 变种病毒扩散</a></li>
-<li><a href="https://github.com/zfyjih353/djy/blob/master/gb/20/12/26/n12646772.md#1">【珍言真语】龚平：受港人感动作《勇武者之歌》</a></li>
-<li><a href="https://github.com/zfyjih353/djy/blob/master/gb/20/12/28/n12649983.md#1">【财商天下】阿里巴巴被调查 一夜蒸发近万亿</a></li>
-<li><a href="https://github.com/zfyjih353/djy/blob/master/gb/20/12/27/n12647114.md#1">频频出丑 中共战狼刘晓明传出退休消息</a></li>
-<li><a href="https://github.com/zfyjih353/djy/blob/master/gb/20/12/27/n12647429.md#1">【疫情更新12.27】阿斯利康疫苗有望防变种病毒</a></li>
-<li><a href="https://github.com/zfyjih353/djy/blob/master/gb/20/12/26/n12646853.md#1">【新闻看点】北京顺义进战时状态 变种病毒扩散</a></li>
-<li><a href="https://github.com/zfyjih353/djy/blob/master/gb/20/12/25/n12645462.md#1">对竞演者发犀利三连问 章子怡获称狠人评委</a></li>
-<li><a href="https://github.com/zfyjih353/djy/blob/master/gb/20/12/27/n12647886.md#1">因星爷《长江七号》爆红 徐娇称造成童年阴影</a></li>
-<li><a href="https://github.com/zfyjih353/djy/blob/master/gb/20/12/27/n12648003.md#1">傅雷之子 86岁钢琴家傅聪在英国染疫住院</a></li>
-<li><a href="https://github.com/zfyjih353/djy/blob/master/gb/20/12/28/n12648660.md#1">2020全球百大美女榜 Lisa夺亚军 子瑜获第四名</a></li>
-<li><a href="https://github.com/zfyjih353/djy/blob/master/gb/20/12/27/n12647612.md#1">男友无预警送百万大礼 邓紫棋圣诞节开心落泪</a></li>
-<li><a href="https://github.com/zfyjih353/djy/blob/master/gb/20/12/27/n12647213.md#1">“不想失去妹妹！”美7岁男童冲入火场救她</a></li>
-<li><a href="https://github.com/zfyjih353/djy/blob/master/gb/20/12/27/n12647393.md#1">中共培育基因改造士兵 或引圣经中末世战争</a></li>
-<li><a href="https://github.com/zfyjih353/djy/blob/master/gb/20/12/26/n12646480.md#1">很多人呼吸方式错了 5种超实用呼吸法 甩掉压力</a></li>
-<li><a href="https://github.com/zfyjih353/djy/blob/master/gb/16/8/16/n8205756.md#1">脸黄、老得快是血虚？女人血虚有6大原因</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/20/n11956529.md#1">台男拒缴违反居家检疫罚锾 于8日已出境 存款遭扣押</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/18/n11950904.md#1">【独家】武汉新增确诊是中共公布的22倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/19/n11953667.md#1">大陆网络流传的一份死亡名单 引关注</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/20/n11959031.md#1">传习近平亲自下令严办任志强 红二代分裂</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/19/n11955384.md#1">北京昆明湖罕见涨潮 传上次涨潮后毛泽东去世</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/18/n11950901.md#1">杜汶泽用口罩换米 与何韵诗幽默互动笑翻网友</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/18/n11950740.md#1">周杰伦全家澳洲度假 返台须居家隔离14天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/13/n11938995.md#1">他在另外空间看见了故人 明白了侵吞善款的代价</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11947360.md#1">一舞（武）两用的智慧</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/zfyjih353/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/zfyjih353/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/13/12/16/n4035342.htm">跨年垃圾减量 推环保杯换热饮</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/13/12/16/n4035342.htm">跨年垃圾减量 推环保杯换热饮</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/zfyjih353/djy/blob/master/gb/13/12/16/n4035342.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/zfyjih353/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zfyjih353/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/zfyjih353/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/zfyjih353/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zfyjih353/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zfyjih353/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zfyjih353/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zfyjih353/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/zfyjih353/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zfyjih353/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zfyjih353/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zfyjih353/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zfyjih353/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zfyjih353/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zfyjih353/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zfyjih353/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/zfyjih353/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zfyjih353/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/zfyjih353/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zfyjih353/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zfyjih353/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zfyjih353/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zfyjih353/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zfyjih353/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/zfyjih353/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zfyjih353/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zfyjih353/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zfyjih353/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/zfyjih353/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zfyjih353/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zfyjih353/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zfyjih353/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zfyjih353/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zfyjih353/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zfyjih353/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zfyjih353/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zfyjih353/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zfyjih353/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zfyjih353/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zfyjih353/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zfyjih353/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zfyjih353/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zfyjih353/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zfyjih353/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zfyjih353/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zfyjih353/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zfyjih353/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zfyjih353/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/13/12/16/n4035342.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
